changed for resident board

--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -10,7 +10,7 @@
 
       <h2 class="mb-3">About</h2>
 
-      <P>원하는 유저를 찾고싶다! 마음맞는 사람들과 같이 게임하고싶다!</p>
+      <P>거주지를 더 편안하게 "__가제__"</p>
 
     </div>
   </body>
