--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -9,8 +9,8 @@
     <div class="container mb-3">
 
       <div class="jumbotron">
-        <h1>League of Legend Team Member Matching Service</h1>
-        <P>팀랭크가 그리워진 분들을 위해! 환영합니다. </p>
+        <h1>가제: 우리동네 게시판</h1>
+        <P>우리동네 소통의 장 </p>
       </div>
 
     </div>
