--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -43,9 +43,9 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="ign" class="col-sm-3 col-form-label">League IGN*</label>
+          <label for="addr" class="col-sm-3 col-form-label"> Address*</label>
           <div class="col-sm-9">
-            <input type="text" id="ign" name="ign" value="<%= user.ign %>" class="form-control">
+            <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control">
           </div>
         </div>
         <div class="form-group row">
