--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -31,9 +31,9 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="IGN" class="col-sm-3 col-form-label">League inGameID*</label>
+          <label for="IGN" class="col-sm-3 col-form-label">addressDetailed*</label>
           <div class="col-sm-9">
-            <input type="text" id="ign" name="ign" value="" class="form-control">
+            <input type="text" id="addr" name="addr" value="" class="form-control">
           </div>
         </div>
         <div class="form-group row">
