--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -24,9 +24,9 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="ign" class="col-sm-3 col-form-label">League IGN</label>
+            <label for="addr" class="col-sm-3 col-form-label">Detailed Address</label>
             <div class="col-sm-9">
-              <input class="form-control" type="text" id="ign" name="ign" value="<%= user.ign %>">
+              <input class="form-control" type="text" id="addr" name="addr" value="<%= user.addr %>">
             </div>
           </div>
         </fieldset>
