--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
   <div class="container">
+
+
+
+
     <div class="navbar-brand">가제:우리동네 게시판</div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
@@ -11,9 +15,14 @@
         <li class="nav-item"><a href="/posts" class="nav-link">Board</a></li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a href="/users" class="nav-link">Users</a></li>
-        <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
-      </ul>
+          <% if(isAuthenticated){ %> <!-- 1 -->
+            <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
+            <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
+          <% } else { %>
+            <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+          <% } %>
+        </ul>
     </div>
   </div>
 </nav>
