board fixed all the erros

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="addr" class="col-sm-3 col-form-label">Detailed Address</label>
+            <label for="addr" class="col-sm-3 col-form-label">Detailed address</label>
             <div class="col-sm-9">
               <input class="form-control" type="text" id="addr" name="addr" value="<%= user.addr %>">
             </div>
