--- a/views/notices/index.ejs
+++ b/views/notices/index.ejs
@@ -8,34 +8,34 @@
 
     <div class="container mb-3">
 
-      <h2 class="mb-3">Board</h2>
+      <h2 class="mb-3">Notice Annoucements</h2>
 
       <table class="board-table table table-sm border-bottom">
 
         <thead class="thead-light">
           <tr>
-            <th scope="col"width = 50>Title</th>
-            <th scope="col" class="author">Author</th> <!-- 1 -->
-            <th scope="col" class="date">Date</th>
+            <th scope="col" width = 50> Title </th>
+            <th scope="col" class="author"> Author </th> <!-- 1 -->
+            <th scope="col" class="date"> Date </th>
           </tr>
         </thead>
 
         <tbody>
-          <% if(posts == null || posts.length == 0){ %>
+          <% if(notices == null || notices.length == 0){ %>
             <tr>
               <td colspan=100> There is no data to show :( </td>
             </tr>
           <% } %>
-          <% posts.forEach(function(post) { %>
+          <% notices.forEach(function(notice) { %>
             <tr>
               <td>
-                <a href="/posts/<%= post._id %>"><div class="ellipsis"><%= post.title %></div></a>
+                <a href="/notices/<%= notice._id %>"><div class="ellipsis"><%= notice.title %></div></a>
               </td>
               <td class="author"> <!-- 2 -->
-                <div class="ellipsis"><%= post.author ? post.author.username : "" %></div>
+                <div class="ellipsis"><%= notice.author ? notice.author.username : "" %></div>
               </td>
               <td class="date">
-                <span data-date="<%= post.createdAt %>"><%= post.createdAt %></span>
+                <span data-date="<%= notice.createdAt %>"><%= notice.createdAt %></span>
               </td>
             </tr>
           <% }) %>
@@ -44,7 +44,7 @@
       </table>
       <div>
           <% if(isAuthenticated){ %> <!-- 1 -->
-            <a class="btn btn-primary" href="/posts/new">New</a>
+            <a class="btn btn-primary" href="/notices/new">New</a>
           <% } %>
         </div>
     </div>
