--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
   <div class="container">
 
-<div class="navbar-brand">가제:우리동네 게시판</div>
+<div class="navbar-brand">가제:우리동네 게시판 </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,7 +9,9 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="/posts" class="nav-link">Board</a></li>
+        <li class="nav-item"><a href="/notices" class="nav-link">Notice</a></li>
+        <li class="nav-item"><a href="/posts" class="nav-link">Free Board</a></li>
+
       </ul>
       <ul class="navbar-nav ml-auto">
           <% if(isAuthenticated){ %> <!-- 1 -->
