fixed all the error

--- a/views/notices/edit.ejs
+++ b/views/notices/edit.ejs
@@ -17,7 +17,7 @@
         </ol>
       </nav>
 
-      <form action="/notices/<%= notice._id %>?_method=put" method="notice">
+      <form action="/notices/<%= notice._id %>?_method=put" method="post">
 
        <div class="form-group">
          <label for="title">Title</label>
