--- a/views/notices/new.ejs
+++ b/views/notices/new.ejs
@@ -16,7 +16,7 @@
         </ol>
       </nav>
 
-      <form action="/notices" method="notice">
+      <form action="/notices" method="post">
 
          <div class="form-group">
            <label for="title">Title</label>
