--- a/views/notices/show.ejs
+++ b/views/notices/show.ejs
@@ -43,7 +43,7 @@
         <a class="btn btn-primary" href="/notices">Back</a>
         <% if(isAuthenticated && notice.author && currentUser.id == notice.author.id){ %> <!-- 1 -->
           <a class="btn btn-primary" href="/notices/<%= notice._id %>/edit">Edit</a>
-          <form action="/notices/<%= notice._id %>?_method=delete" method="notice" class="d-inline">
+          <form action="/notices/<%= notice._id %>?_method=delete" method="post" class="d-inline">
             <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
           </form>
         <% } %>
