--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,6 +11,7 @@
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/notices" class="nav-link">Notice</a></li>
         <li class="nav-item"><a href="/posts" class="nav-link">Free Board</a></li>
+        <li class="nav-item"><a href="/trades" class="nav-link">Trades</a></li>
 
       </ul>
       <ul class="navbar-nav ml-auto">
