--- a/views/notices/show.ejs
+++ b/views/notices/show.ejs
@@ -55,7 +55,7 @@
              <% } %>
            </div>
 
-           <h4 class="mt-3">Comments</h4> <!-- 1 -->
+           <h4 class="mt-3">Comments</h4> <!-- comments -->
 
                  <% if(comments.length){ %> <!-- 1-1 -->
                    <div class="mt-3 border-bottom">
@@ -78,7 +78,7 @@
                  <% } %>
 
                  <div class="mt-3"> <!-- 2 -->
-                   <form action="/comments?postId=<%= post._id %><%= getPostQueryString(true) %>" method="post">
+                   <form action="/comments?noticeId=<%= notice._id %><%= getPostQueryString(true) %>" method="post">
                      <fieldset <%= !isAuthenticated?'disabled':'' %>> <!-- 2-1 -->
                        <div class="row">
                          <div class="col-8">
