added comment edit/delete feature for 'notice' board

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -26,8 +26,18 @@ body {
   font-size: 0.8em;
 }
 
+.post-body,
 .comment-text {
   white-space: pre-line;
+}
+
+.comment-edit,
+.comment-edit-enabled .comment-show {
+  display:none;
+}
+
+.comment-edit-enabled .comment-edit {
+  display:inherit;
 }
 
 .user-form {
