--- a/views/notices/show.ejs
+++ b/views/notices/show.ejs
@@ -1,102 +1,123 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+<head>
+  <%- include('../partials/head') %>
+</head>
 
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb p-1 pl-2 pr-2">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/notices">Notice</a></li>
-          <li class="breadcrumb-item active" aria-current="page"><%= notice.title %></li>
-        </ol>
-      </nav>
+<body>
+  <%- include('../partials/nav') %>
 
-      <div class="card">
-        <h5 class="card-header p-2"><%= notice.title %></h5>
-        <div class="row">
+  <div class="container mb-3">
 
-          <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
-            <div class="notice-body p-2"><%= notice.body %></div>
-          </div>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb p-1 pl-2 pr-2">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item"><a href="/notices">Notice</a></li>
+        <li class="breadcrumb-item active" aria-current="page"><%= notice.title %></li>
+      </ol>
+    </nav>
 
-          <div class="col-md-5 col-lg-4 col-xl-3 order-sm-1 order-md-2">
-            <div class="notice-info card m-2 p-2">
-             <div class="border-bottom pb-1 mb-1"> <!-- 1 -->
-               <span>Author</span> : <%= notice.author ? notice.author.username : "" %>
-             </div>
-             <div><span>Created</span> : <span data-date-time="<%= notice.createdAt %>"><%= notice.createdAt %></span></div>
-             <% if(notice.updatedAt) { %>
-               <div><span>Updated</span> : <span data-date-time="<%= notice.updatedAt %>"><%= notice.updatedAt %></span></div>
-             <% } %>
-           </div>
-          </div>
+    <div class="card">
+      <h5 class="card-header p-2"><%= notice.title %></h5>
+      <div class="row">
 
+        <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
+          <div class="notice-body p-2"><%= notice.body %></div>
         </div>
-      </div>
 
-      <div class="mt-3">
-        <a class="btn btn-primary" href="/notices">Back</a>
-        <% if(isAuthenticated && notice.author && currentUser.id == notice.author.id){ %> <!-- 1 -->
-          <a class="btn btn-primary" href="/notices/<%= notice._id %>/edit">Edit</a>
-          <form action="/notices/<%= notice._id %>?_method=delete" method="post" class="d-inline">
-            <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
-          </form>
+        <div class="col-md-5 col-lg-4 col-xl-3 order-sm-1 order-md-2">
+          <div class="notice-info card m-2 p-2">
+            <div class="border-bottom pb-1 mb-1">
+              <span>Author</span> : <%= notice.author ? notice.author.username : "" %>
+            </div>
+            <div><span>Created</span> : <span data-date-time="<%= notice.createdAt %>"><%= notice.createdAt %></span></div>
+            <% if(notice.updatedAt) { %>
+            <div><span>Updated</span> : <span data-date-time="<%= notice.updatedAt %>"><%= notice.updatedAt %></span></div>
+            <% } %>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="mt-3">
+      <a class="btn btn-primary" href="/notices">Back</a>
+      <% if(isAuthenticated && notice.author && currentUser.id == notice.author.id){ %>
+      <a class="btn btn-primary" href="/notices/<%= notice._id %>/edit">Edit</a>
+      <form action="/notices/<%= notice._id %>?_method=delete" method="post" class="d-inline">
+        <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+      </form>
+      <% } %>
+    </div>
+
+    <div>
+      <% if(isAuthenticated && currentUser.id == notice.username){ %>
+      <a class="btn btn-primary" href="/users/<%= user.username %>/edit">Edit</a>
+      <% } %>
+    </div>
+
+    <h4 class="mt-3">Comments</h4> <!-- comments -->
+
+    <% if(comments.length){ %>
+    <div class="mt-3 border-bottom">
+      <% comments.forEach(function(comment) { %>
+      <div class="border-top pt-1 pb-1">
+        <% if(comment.isDeleted){ %>
+        <div class="text-muted p-2">(Deleted Commnet)</div>
+        <% } else { %>
+        <div class="row">
+          <div class="col-3 col-md-2 col-lg-1 pl-4">
+            <%= comment.author.username %></div>
+          <div id="comment-<%= comment._id %>" class="col-9 col-md-10 col-lg-11 <%= (commentError._id == comment._id)?'comment-edit-enabled':'' %>">
+            <div class="comment-show">
+              <div class="comment-text mb-3">
+                <%= comment.text %></div>
+              <small class="d-block">
+                (Created: <span data-date-time="<%= comment.createdAt %>"></span>
+                <% if(comment.updatedAt){ %>
+                | Updated: <span data-date-time="<%= comment.updatedAt %>"></span>
+                <% } %>)
+              </small>
+              <% if(isAuthenticated && comment.author && currentUser.id == comment.author.id){ %>
+              <!-- if Authenticated-->
+              <small class="d-block">
+                <a href="javascript:void(0)"
+                  onclick="$('.comment-reply-enabled').removeClass('comment-reply-enabled'); $('.comment-edit-enabled').removeClass('comment-edit-enabled'); $('#comment-<%= comment._id %>').addClass('comment-edit-enabled')">Edit</a>
+                |
+                <form action="/comments/<%= comment._id %>?noticeId=<%= notice._id %>&_method=delete<%= getPostQueryString(true) %>" method="post" class="d-inline">
+                  <a href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+                </form>
+              </small>
+              <% } %>
+            </div>
+            <div class="comment-edit">
+              <%- include('./partials/comment-form', {
+                      actionUrl:'/comments/' + comment._id + '?noticeId=' + notice._id + '&_method=put',
+                      comment: comment,
+                      commentForm: commentForm,
+                      commentError: commentError,
+                    }); %>
+            </div>
+          </div>
+        </div>
         <% } %>
       </div>
-
-      <div>
-             <% if(isAuthenticated && currentUser.id == notice.username){ %> <!-- 1 -->
-               <a class="btn btn-primary" href="/users/<%= user.username %>/edit">Edit</a>
-             <% } %>
-           </div>
-
-           <h4 class="mt-3">Comments</h4> <!-- comments -->
-
-                 <% if(comments.length){ %> <!-- 1-1 -->
-                   <div class="mt-3 border-bottom">
-                     <% comments.forEach(function(comment) { %> <!-- 1-2 -->
-                       <div class="border-top pt-1 pb-1">
-                         <div class="row">
-                           <div class="col-3 col-md-2 col-lg-1 pl-4" >
-                            <%= comment.author.username %></div> <!-- 1-3 -->
-<div class="col-9 col-md-10 col-lg-11">
-                             <div class="comment-show">
-                               <div class="comment-text mb-3">
-                                 <%= comment.text %></div> <!-- 1-4 -->
-                               <small class="d-block">
-                                 (Created: <span data-date-time="<%= comment.createdAt %>"></span>) <!-- 1-5 -->
-                               </small>
-                             </div>
-                           </div>
-                         </div>
-                       </div>
-                     <% }) %>
-                   </div>
-                 <% } %>
-
-                 <div class="mt-3"> <!-- 2 -->
-                   <form action="/comments?noticeId=<%= notice._id %><%= getPostQueryString(true) %>" method="post">
-                     <fieldset <%= !isAuthenticated?'disabled':'' %>> <!-- 2-1 -->
-                       <div class="row">
-                         <div class="col-8">
-                           <textarea name="text" rows="2" class="form-control <%= (commentError.errors.text)?'is-invalid':'' %>"><%= commentForm.form.text %></textarea>
-                         </div>
-                         <div class="col-4">
-                           <button type="submit" class="btn btn-primary h-100 mr-2">Add Comment</button>
-                         </div>
-                       </div>
-                       <% if(commentError.errors.text){ %>
-                         <span class="invalid-feedback d-block"><%= commentError.errors.text.message %></span> <!-- 2-2 -->
-                       <% } %>
-                     </fieldset>
-                   </form>
-                 </div>
-
+      <% }) %>
     </div>
-  </body>
+    <% } %>
+
+    <div class="mt-3">
+      <!-- 7 -->
+      <%- include('./partials/comment-form', {
+          actionUrl:'/comments?noticeId=' + notice._id,
+          comment: {},
+          commentForm: commentForm,
+          commentError: commentError,
+        }); %>
+    </div>
+
+  </div>
+</body>
+
 </html>
