--- a/views/frees/edit.ejs
+++ b/views/frees/edit.ejs
@@ -11,9 +11,9 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/trades">Board</a></li>
-          <li class="breadcrumb-item"><a href="/trades/<%= post._id %>"><%= post.title %></a></li>
-          <li class="breadcrumb-item active" aria-current="page">Edit Trade</li>
+          <li class="breadcrumb-item"><a href="/frees">Board</a></li>
+          <li class="breadcrumb-item"><a href="/frees/<%= post._id %>"><%= post.title %></a></li>
+          <li class="breadcrumb-item active" aria-current="page">Edit Post</li>
         </ol>
       </nav>
 
