--- a/views/frees/index.ejs
+++ b/views/frees/index.ejs
@@ -10,7 +10,7 @@
 
   <div class="container mb-3">
 
-    <h2 class="mb-3">Announcements</h2>
+    <h2 class="mb-3">Free Board</h2>
 
       <%- include('../partials/index/board-table') %>
 
