--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/notices" class="nav-link">Notice</a></li>
-        <li class="nav-item"><a href="/posts" class="nav-link">Free Board</a></li>
+        <li class="nav-item"><a href="/frees" class="nav-link">Free Board</a></li>
         <li class="nav-item"><a href="/trades" class="nav-link">Trades</a></li>
 
       </ul>
