--- a/views/trades/index.ejs
+++ b/views/trades/index.ejs
@@ -1,94 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+<head>
+  <%- include('../partials/head') %>
+</head>
 
-      <h2 class="mb-3">Make Trades</h2>
+<body>
+  <%- include('../partials/nav') %>
 
-      <table class="board-table table table-sm border-bottom">
+  <div class="container mb-3">
 
-        <thead class="thead-light">
-          <tr>
-            <th scope="col" width = 50> Title </th>
-            <th scope="col" class="author"> Author </th> <!-- 1 -->
-            <th scope="col" class="date"> Date </th>
-          </tr>
-        </thead>
+    <h2 class="mb-3">Make Trades</h2>
 
-        <tbody>
-          <% if(trades == null || trades.length == 0){ %>
-            <tr>
-              <td colspan=100> There is no data to show :( </td>
-            </tr>
-          <% } %>
-          <% trades.forEach(function(trade) { %>
-            <tr>
-              <td>
-                <a href="/trades/<%= trade._id %>"><div class="ellipsis"><%= trade.title %></div></a>
-              </td>
-              <td class="author"> <!-- 2 -->
-                <div class="ellipsis"><%= trade.author ? trade.author.username : "" %></div>
-              </td>
-              <td class="date">
-                <span data-date="<%= trade.createdAt %>"><%= trade.createdAt %></span>
-              </td>
-            </tr>
-          <% }) %>
-        </tbody>
+      <%- include('../partials/index/board-table') %>
 
-      </table>
-      <div class="row mb-3">
+    <div class="row mb-3">
 
-        <div class="col-2"> <!-- 1 -->
-          <% if(isAuthenticated){ %>
-            <a class="btn btn-primary" href="/trades/new">New</a>
-          <% } %>
-        </div>
-
-        <nav class="col-8">
-          <% <!-- 2 -->
-            var offset = 2;
-            var previousBtnEnabled = currentPage>1;
-            var nextBtnEnabled = currentPage<maxPage;
-          %>
- <!-- 3 --><ul class="pagination pagination-sm justify-content-center align-items-center h-100 mb-0">            <li class="page-item <%= previousBtnEnabled?'':'disabled' %>">
-              <a class="page-link" href="/trades?page=<%= currentPage-1 %>&limit=<%= limit %>" <%= previousBtnEnabled?'':'tabindex=-1' %>>«</a>
-            </li>
-            <% for(i=1;i<=maxPage;i++){ %>
-              <% if(i==1 || i==maxPage || (i>=currentPage-offset && i<=currentPage+offset)){ %>
-                <li class="page-item <%= currentPage==i?'active':'' %>"><a class="page-link" href="/trades?page=<%= i %>&limit=<%= limit %>"> <%= i %> </a></li>
-              <% } else if(i==2 || i==maxPage-1){ %>
-                <li><a class="page-link">...</a></li>
-              <% } %>
-            <% } %>
-            <li class="page-item <%= nextBtnEnabled?'':'disabled' %>">
-              <a class="page-link" href="/trades?page=<%= currentPage+1 %>&limit=<%= limit %>" <%= nextBtnEnabled?'':'tabindex=-1' %>>»</a>
-            </li>
-          </ul>
-        </nav>
-
-      </div>
-
-      <form action="/trades" method="get"> <!-- 4 -->
-        <div class="form-row">
-
-          <div class="form-group col-3">
-            <label>Show</label>
-            <select name="limit" class="custom-select" onchange="this.parentElement.parentElement.parentElement.submit()">
-              <option value="5" <%= limit==5?'selected':'' %>>5 posts</option>
-              <option value="10" <%= limit==10?'selected':'' %>>10 posts</option>
-              <option value="20" <%= limit==20?'selected':'' %>>20 posts</option>
-            </select>
-          </div>
-
-        </div>
-      </form>
+      <%- include('../partials/index/new-button') %>
+      <%- include('../partials/index/page-number') %>
 
     </div>
-  </body>
- </html>
+
+      <%- include('../partials/index/post-count') %>
+
+  </div>
+</body>
+
+</html>
