code clean-up regarding 'boardName'

--- a/views/frees/new.ejs
+++ b/views/frees/new.ejs
@@ -18,7 +18,7 @@
       </ol>
     </nav>
 
-    <%- include('../partials/new/form') %>
+    <%- include('../partials/boards/new/form') %>
 
   </div>
 
