--- a/views/notices/edit.ejs
+++ b/views/notices/edit.ejs
@@ -17,7 +17,7 @@
         </ol>
       </nav>
 
-      <%- include('../partials/edit/form') %>
+      <%- include('../partials/boards/edit/form') %>
 
 
     </div>
