--- a/views/notices/new.ejs
+++ b/views/notices/new.ejs
@@ -16,7 +16,7 @@
         </ol>
       </nav>
 
-      <%- include('../partials/new/form') %>
+      <%- include('../partials/boards/new/form') %>
 
     </div>
   </body>
