--- a/views/notices/show.ejs
+++ b/views/notices/show.ejs
@@ -18,11 +18,11 @@
       </ol>
     </nav>
 
-    <%- include('../partials/show/card') %>
+    <%- include('../partials/boards/show/card') %>
 
-    <%- include('../partials/show/buttons') %>
+    <%- include('../partials/boards/show/buttons') %>
 
-    <%- include('../partials/show/comments') %>
+    <%- include('../partials/boards/show/comments') %>
 
   </div>
 </body>
