--- a/views/partials/boards/index/new-button.ejs
+++ b/views/partials/boards/index/new-button.ejs
@@ -1,6 +1,6 @@
 <div class="col-2">
 
   <% if(isAuthenticated){ %>
-  <a class="btn btn-primary" href="/<%= boardName %>s/new">New</a>
+  <a class="btn btn-primary" href="/<%= boardName %>/new">New</a>
   <% } %>
 </div>
