more clean-up, used req.params to get boardName instead of cutting off strings from originalUrl

--- a/views/boards/frees/edit.ejs
+++ b/views/boards/frees/edit.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head') %>
+    <%- include('../../partials/head') %>
   </head>
   <body>
-    <%- include('../partials/nav') %>
+    <%- include('../../partials/nav') %>
 
     <div class="container mb-3">
 
@@ -17,7 +17,7 @@
         </ol>
       </nav>
 
-      <%- include('../partials/boards/edit/form') %>
+      <%- include('../../partials/boards/edit/form') %>
 
     </div>
   </body>
