--- a/views/boards/frees/show.ejs
+++ b/views/boards/frees/show.ejs
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <%- include('../partials/head') %>
+  <%- include('../../partials/head') %>
 </head>
 
 <body>
-  <%- include('../partials/nav') %>
+  <%- include('../../partials/nav') %>
 
   <div class="container mb-3">
 
@@ -18,11 +18,11 @@
       </ol>
     </nav>
 
-    <%- include('../partials/boards/show/card') %>
+    <%- include('../../partials/boards/show/card') %>
 
-    <%- include('../partials/boards/show/buttons') %>
+    <%- include('../../partials/boards/show/buttons') %>
 
-    <%- include('../partials/boards/show/comments') %>
+    <%- include('../../partials/boards/show/comments') %>
 
   </div>
 </body>
