--- a/views/boards/notices/show.ejs
+++ b/views/boards/notices/show.ejs
@@ -2,28 +2,28 @@
 <html>
 
 <head>
-  <%- include('../partials/head') %>
+  <%- include('../../partials/head') %>
 </head>
 
 <body>
-  <%- include('../partials/nav') %>
+  <%- include('../../partials/nav') %>
 
   <div class="container mb-3">
 
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb p-1 pl-2 pr-2">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/trades">Trade</a></li>
+        <li class="breadcrumb-item"><a href="/notices">Announcements</a></li>
         <li class="breadcrumb-item active" aria-current="page"><%= post.title %></li>
       </ol>
     </nav>
 
-    <%- include('../partials/boards/show/card') %>
+    <%- include('../../partials/boards/show/card') %>
 
-    <%- include('../partials/boards/show/buttons') %>
+    <%- include('../../partials/boards/show/buttons') %>
 
-    <%- include('../partials/boards/show/comments') %>
-    
+    <%- include('../../partials/boards/show/comments') %>
+
   </div>
 </body>
 
