--- a/views/partials/boards/new/form.ejs
+++ b/views/partials/boards/new/form.ejs
@@ -1,4 +1,4 @@
-<form action="/<%= boardName %>" method="post">
+<form action="/boards/<%= boardName %>" method="post">
 
   <%- include('./form-body') %>
 
