--- a/views/boards/frees/new.ejs
+++ b/views/boards/frees/new.ejs
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <%- include('../partials/head') %>
+  <%- include('../../partials/head') %>
 </head>
 
 <body>
-  <%- include('../partials/nav') %>
+  <%- include('../../partials/nav') %>
 
   <div class="container mb-3">
 
@@ -18,7 +18,7 @@
       </ol>
     </nav>
 
-    <%- include('../partials/boards/new/form') %>
+    <%- include('../../partials/boards/new/form') %>
 
   </div>
 
