--- a/views/boards/trades/new.ejs
+++ b/views/boards/trades/new.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head') %>
+    <%- include('../../partials/head') %>
   </head>
   <body>
-    <%- include('../partials/nav') %>
+    <%- include('../../partials/nav') %>
 
     <div class="container mb-3">
 
@@ -16,7 +16,7 @@
         </ol>
       </nav>
 
-      <%- include('../partials/boards/new/form') %>
+      <%- include('../../partials/boards/new/form') %>
 
     </div>
   </body>
