--- a/views/partials/boards/edit/form-body.ejs
+++ b/views/partials/boards/edit/form-body.ejs
@@ -21,6 +21,6 @@
 <% } %>
 
 <div>
-  <a class="btn btn-primary" href="/<%= boardName %>">Back</a>
+  <a class="btn btn-primary" href="/boards/<%= boardName %>">Back</a>
   <button type="submit" class="btn btn-primary">Submit</button>
 </div>
