--- a/views/partials/boards/edit/form.ejs
+++ b/views/partials/boards/edit/form.ejs
@@ -1,4 +1,4 @@
-<form action="/<%= boardName + '/' + post._id %>?_method=put" method="post">
+<form action="/boards/<%= boardName + '/' + post._id %>?_method=put" method="post">
 
   <%- include('./form-body') %>
 
