--- a/views/partials/boards/index/board-table.ejs
+++ b/views/partials/boards/index/board-table.ejs
@@ -17,7 +17,7 @@
     <% posts.forEach(function(post) { %>
     <tr>
       <td>
-        <a href="/<%= boardName + '/' + post._id %>">
+        <a href="/boards/<%= boardName + '/' + post._id %>">
           <div class="ellipsis"><%= post.title %></div>
         </a>
       </td>
