--- a/views/partials/boards/show/buttons.ejs
+++ b/views/partials/boards/show/buttons.ejs
@@ -2,8 +2,13 @@
   <a class="btn btn-primary" href="/boards/<%= boardName %>">Back</a>
   <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %>
   <a class="btn btn-primary" href="/boards/<%= boardName + '/' + post._id %>/edit">Edit</a>
+
   <form action="/boards/<%= boardName + '/' + post._id %>?_method=delete" method="post" class="d-inline">
     <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+  </form>
+
+  <form action="/boards/<%= boardName + '/' + post._id+'/likes'%>?_method=post" method="post" class="d-inline">
+    <a class="btn btn-primary" href="#" onclick="confirm('Do you want to Like this?')?this.parentElement.submit():null;">Likes</a>
   </form>
   <% } %>
 </div>
