--- a/views/partials/boards/show/card.ejs
+++ b/views/partials/boards/show/card.ejs
@@ -11,10 +11,25 @@
         <div class="border-bottom pb-1 mb-1">
           <span>Author</span> : <%= post.author ? post.author.username : "" %>
         </div>
-        <div><span>Created</span> : <span data-date-time="<%= post.createdAt %>"><%= post.createdAt %></span></div>
+        <div><span>Created</span> :
+          <span data-date-time="<%= post.createdAt %>"><%= post.createdAt %>
+          </span>
+        </div>
         <% if(post.updatedAt) { %>
-        <div><span>Updated</span> : <span data-date-time="<%= post.updatedAt %>"><%= post.updatedAt %></span></div>
+        <div><span>Updated</span> :
+           <span data-date-time="<%= post.updatedAt %>"><%= post.updatedAt %>
+           </span>
+        </div>
         <% } %>
+
+        <div><span>Likes</span> :
+           <%= post.likes %>
+
+        </div>
+
+
+
+
       </div>
     </div>
 
