likes button disabling & bug fixes

--- a/views/boards/notices/edit.ejs
+++ b/views/boards/notices/edit.ejs
@@ -11,8 +11,8 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/notices">Board</a></li>
-          <li class="breadcrumb-item"><a href="/notices/<%= post._id %>"><%= post.title %></a></li>
+          <li class="breadcrumb-item"><a href="/boards/notices">Board</a></li>
+          <li class="breadcrumb-item"><a href="/boards/notices/<%= post._id %>"><%= post.title %></a></li>
           <li class="breadcrumb-item active" aria-current="page">Edit Notice</li>
         </ol>
       </nav>
