--- a/views/boards/notices/show.ejs
+++ b/views/boards/notices/show.ejs
@@ -13,7 +13,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb p-1 pl-2 pr-2">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/notices">Announcements</a></li>
+        <li class="breadcrumb-item"><a href="/boards/notices">Announcements</a></li>
         <li class="breadcrumb-item active" aria-current="page"><%= post.title %></li>
       </ol>
     </nav>
