--- a/views/boards/trades/edit.ejs
+++ b/views/boards/trades/edit.ejs
@@ -11,8 +11,8 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/trades">Board</a></li>
-          <li class="breadcrumb-item"><a href="/trades/<%= post._id %>"><%= post.title %></a></li>
+          <li class="breadcrumb-item"><a href="/boards/trades">Board</a></li>
+          <li class="breadcrumb-item"><a href="/boards/trades/<%= post._id %>"><%= post.title %></a></li>
           <li class="breadcrumb-item active" aria-current="page">Edit Trade</li>
         </ol>
       </nav>
