--- a/views/boards/trades/new.ejs
+++ b/views/boards/trades/new.ejs
@@ -11,7 +11,7 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
           <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/trades">Trades</a></li>
+          <li class="breadcrumb-item"><a href="/boards/trades">Trades</a></li>
           <li class="breadcrumb-item active" aria-current="page">Make Trades</li>
         </ol>
       </nav>
