index show likes added

--- a/views/partials/boards/index/board-table.ejs
+++ b/views/partials/boards/index/board-table.ejs
@@ -20,6 +20,8 @@
         <a href="/boards/<%= boardName + '/' + post._id %>">
           <div class="ellipsis"><%= post.title %></div>
         </a>
+        <div class="ellipsis">좋아요 : <%= post.likes %></div>
+
       </td>
       <td class="author">
         <!-- 2 -->
