--- a/views/partials/boards/show/card.ejs
+++ b/views/partials/boards/show/card.ejs
@@ -12,7 +12,7 @@
           <span>Author</span> : <%= post.author ? post.author.username : "" %>
         </div>
         <div><span>Created</span> :
-          <span data-date-time="<%= post.createdAt %>"><%= post.createdAt %>
+          <span style="font-size: 50%" data-date-time="<%= post.createdAt %>"><%= post.createdAt %>
           </span>
         </div>
         <% if(post.updatedAt) { %>
