--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,8 +16,10 @@
       </ul>
       <ul class="navbar-nav ml-auto">
           <% if(isAuthenticated){ %> <!-- 1 -->
+            <li class="nav-item"><a href="/dm/" class="nav-link">Chat</a></li>
             <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
             <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
+
           <% } else { %>
             <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
             <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
