--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -11,6 +11,10 @@
       <h2 class="mb-3">About</h2>
 
       <P>거주지를 더 편안하게 "__가제__"</p>
+      <i class="far fa-comment-dots"></i>
+      <i class="fas fa-comment-dots"></i>
+      <i class="far fa-comment"></i>
+
 
     </div>
   </body>
