--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,7 @@
 
 <!-- web font -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- my css -->
 <link rel="stylesheet" href="/css/master.css">
