--- a/views/partials/boards/show/comment-form.ejs
+++ b/views/partials/boards/show/comment-form.ejs
@@ -16,9 +16,9 @@
       <div class="col-4">
         <% if(comment._id){ %>
           <button type="submit" class="btn btn-primary h-100 mr-2 pl-4 pr-4">Edit</button>
-<!-- 3 --><a href="javascript:void(0)" onclick="$('.comment-<%= comment._id %>').removeClass('comment-edit-enabled')">Cancel</a>
+<!-- 3 --><a href="javascript:void(0)" onclick="$('.comment-<%= comment._id %>').removeClass('comment-edit-enabled')">취소</a>
         <% } else { %>
-          <button type="submit" class="btn btn-primary h-100 mr-2">Add Comment</button>
+          <button type="submit" class="btn btn-primary h-100 mr-2">댓글 달기</button>
         <% } %>
       </div>
     </div>
