--- a/public/css/master.css
+++ b/public/css/master.css
@@ -50,3 +50,17 @@ body {
 .board-table .date {
   width: 100px;
 }
+
+
+.button__badge {
+  background-color: #fa3e3e;
+  border-radius: 2px;
+  color: white;
+
+  padding: 1px 3px;
+  font-size: 10px;
+
+  position: relative; /* Position the badge within the relatively positioned button */
+  top: 0;
+  right: 0;
+}
