--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -15,7 +15,7 @@
       <form class="user-form" action="/login" method="post">
 
         <div class="form-group row">
-          <label for="username" class="col-sm-3 col-form-label">Username</label>
+          <label for="username" class="col-sm-3 col-form-label">아이디</label>
           <div class="col-sm-9">
             <input type="text" id="username" name="username" value="<%= username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>">
             <% if(errors.username){ %>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group row">
-          <label for="password" class="col-sm-3 col-form-label">Password</label>
+          <label for="password" class="col-sm-3 col-form-label">비밀번호</label>
           <div class="col-sm-9">
             <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>">
             <% if(errors.password){ %>
