--- a/views/partials/boards/index/board-table.ejs
+++ b/views/partials/boards/index/board-table.ejs
@@ -2,16 +2,16 @@
 
   <thead class="thead-light">
     <tr>
-      <th scope="col" width=50> Title </th>
-      <th scope="col" class="author"> Author </th>
-      <th scope="col" class="date"> Date </th>
+      <th scope="col" width=50> 제목 </th>
+      <th scope="col" class="author"> 작성자 </th>
+      <th scope="col" class="date"> 작성일 </th>
     </tr>
   </thead>
 
   <tbody>
     <% if(posts == null || posts.length == 0){ %>
     <tr>
-      <td colspan=100> There is no data to show :( </td>
+      <td colspan=100> 아직 포스트가 없어요:( </td>
     </tr>
     <% } %>
     <% posts.forEach(function(post) { %>
@@ -25,7 +25,7 @@
       </td>
       <td class="author">
         <!-- 2 -->
-        <div class="ellipsis"><%= post.author ? post.author.username : "" %></div>
+        <div class="ellipsis"><%= post.author ? post.author.name : "" %></div>
       </td>
       <td class="date">
         <span data-date="<%= post.createdAt %>"><%= post.createdAt %></span>
