--- a/views/partials/boards/show/buttons.ejs
+++ b/views/partials/boards/show/buttons.ejs
@@ -1,19 +1,31 @@
+
+<html>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <div class="mt-3">
-  <a class="btn btn-primary" href="/boards/<%= boardName %>">Back</a>
+  <a class="btn btn-primary" href="/boards/<%= boardName %>">뒤로가기</a>
   <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %>
-  <a class="btn btn-primary" href="/boards/<%= boardName %>/<%= post._id %>/edit">Edit</a>
+  <a class="btn btn-primary" href="/boards/<%= boardName + '/' + post._id %>/edit">글 수정</a>
 
   <form action="/boards/<%= boardName + '/' + post._id %>?_method=delete" method="post" class="d-inline">
-    <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+    <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">글 지우기</a>
   </form>
-  <% } %>
+
+
   <form action="/boards/<%= boardName + '/' + post._id+'/likes'%>?_method=post" method="post" class="d-inline">
-    <a class="btn btn-primary <%= liked?'disabled':'' %>" href="#" onclick="this.parentElement.submit()">Likes</a>
+    <a class="btn btn-primary" <%= liked?'disabled':'' %> href="#" onclick="confirm('Do you want to Like this?')?this.parentElement.submit():null;">
+      <i class='far fa-thumbs-up' style='font-size:24px'></i>
+    </a>
     <% if(boardName === 'trades'){ %>
-      <a class="btn btn-primary" href="/dm/<%= post.author.username %>/show">Chat</a>
-    <% } %>
-    <!-- class="btn btn-primary " -->
+     <a class="btn btn-primary" href="/dm/<%= post.author.username %>/show">
+
+        <i class='far fa-comment-dots' style='font-size:24px'></i>
+
+
+     </a>
+   <% } %>
   </form>
+
+  <% } %>
 </div>
 
 <div>
@@ -21,3 +33,4 @@
   <a class="btn btn-primary" href="/users/<%= user.username %>/edit">Edit</a>
   <% } %>
 </div>
+</html>
