--- a/views/partials/boards/show/comments.ejs
+++ b/views/partials/boards/show/comments.ejs
@@ -5,29 +5,29 @@
   <% comments.forEach(function(comment) { %>
   <div class="border-top pt-1 pb-1">
     <% if(comment.isDeleted){ %>
-    <div class="text-muted p-2">(Deleted Commnet)</div>
+    <div class="text-muted p-2">(삭제된 댓글입니다)</div>
     <% } else { %>
     <div class="row">
       <div class="col-3 col-md-2 col-lg-1 pl-4">
-        <%= comment.author.username %></div>
+        <%= comment.author.name %></div>
       <div id="comment-<%= comment._id %>" class="col-9 col-md-10 col-lg-11 <%= (commentError._id == comment._id)?'comment-edit-enabled':'' %>">
         <div class="comment-show">
           <div class="comment-text mb-3">
             <%= comment.text %></div>
           <small class="d-block">
-            (Created: <span data-date-time="<%= comment.createdAt %>"></span>
+            (작성일: <span data-date-time="<%= comment.createdAt %>"></span>
             <% if(comment.updatedAt){ %>
-            | Updated: <span data-date-time="<%= comment.updatedAt %>"></span>
+            | 수정일: <span data-date-time="<%= comment.updatedAt %>"></span>
             <% } %>)
           </small>
           <% if(isAuthenticated && comment.author && currentUser.id == comment.author.id){ %>
           <!-- if Authenticated-->
           <small class="d-block">
             <a href="javascript:void(0)"
-              onclick="$('.comment-reply-enabled').removeClass('comment-reply-enabled'); $('.comment-edit-enabled').removeClass('comment-edit-enabled'); $('#comment-<%= comment._id %>').addClass('comment-edit-enabled')">Edit</a>
+              onclick="$('.comment-reply-enabled').removeClass('comment-reply-enabled'); $('.comment-edit-enabled').removeClass('comment-edit-enabled'); $('#comment-<%= comment._id %>').addClass('comment-edit-enabled')">수정</a>
             |
             <form action="/comments/<%= comment._id %>?postId=<%= post._id %>&_method=delete<%= getPostQueryString(true) %>" method="post" class="d-inline">
-              <a href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+              <a href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">뒤로가기</a>
             </form>
           </small>
           <% } %>
