--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,6 @@
+
+<html>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
   <div class="container">
 
@@ -7,24 +10,29 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="/" class="nav-link">홈</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="/boards/notices" class="nav-link">Notice</a></li>
-        <li class="nav-item"><a href="/boards/frees" class="nav-link">Free Board</a></li>
-        <li class="nav-item"><a href="/boards/trades" class="nav-link">Trades</a></li>
+        <li class="nav-item"><a href="/boards/notices" class="nav-link">공지사항</a></li>
+        <li class="nav-item"><a href="/boards/frees" class="nav-link">자유 게시판</a></li>
+        <li class="nav-item"><a href="/boards/trades" class="nav-link">직거래</a></li>
 
       </ul>
       <ul class="navbar-nav ml-auto">
           <% if(isAuthenticated){ %> <!-- 1 -->
-            <li class="nav-item"><a href="/dm/" class="nav-link">Chat</a></li>
+          <li><a href="/dm/" class="nav-link"><!--message-->
+            <i class='far fa-comment-dots' style='font-size:24px'></i>
+          <span class="button__badge">2</span><!--have to changeto chat.length-->
+          </a>
+        </li>
             <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
-            <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
+            <li class="nav-item"><a href="/logout" class="nav-link">로그아웃</a></li>
 
           <% } else { %>
-            <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
-            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/users/new" class="nav-link">회원가입</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">로그인</a></li>
           <% } %>
         </ul>
     </div>
   </div>
 </nav>
+</html>
