--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -14,7 +14,7 @@
 
 
         <div class="form-group row">
-          <label for="username" class="col-sm-3 col-form-label">Username*</label>
+          <label for="username" class="col-sm-3 col-form-label">아이디*</label>
           <div class="col-sm-9">
             <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>"> <!-- 1, 2 -->
             <% if(errors.username){ %> <!-- 3 -->
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Name*</label>
+          <label for="name" class="col-sm-3 col-form-label">닉네임*</label>
           <div class="col-sm-9">
             <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 1, 2 -->
             <% if(errors.name){ %> <!-- 3 -->
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="email" class="col-sm-3 col-form-label">Email</label>
+          <label for="email" class="col-sm-3 col-form-label">이메일</label>
           <div class="col-sm-9">
             <input type="text" id="email" name="email" value="<%= user.email %>" class="form-control <%= (errors.email)?'is-invalid':'' %>"> <!-- 1, 2 -->
             <% if(errors.email){ %>
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="addr" class="col-sm-3 col-form-label">Address</label>
+          <label for="addr" class="col-sm-3 col-form-label">주소</label>
           <div class="col-sm-9">
             <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 1, 2 -->
             <% if(errors.addr){ %>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="form-group row">
-          <label for="password" class="col-sm-3 col-form-label">Password*</label>
+          <label for="password" class="col-sm-3 col-form-label">비밀번호*</label>
           <div class="col-sm-9">
             <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>"> <!-- 1, 2 -->
             <% if(errors.password){ %> <!-- 3 -->
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="passwordConfirmation" class="col-sm-3 col-form-label">Password Confirmation*</label>
+          <label for="passwordConfirmation" class="col-sm-3 col-form-label">비밀번호 확인*</label>
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>"> <!-- 1, 2 -->
             <% if(errors.passwordConfirmation){ %> <!-- 3 -->
@@ -69,7 +69,7 @@
           </div>
         </div>
         <p>
-          <small>*Required</small>
+          <small>*꼭 필요한 항목</small>
         </p>
 
         <% if(errors.unhandled){ %> <!-- 4 -->
