--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -12,19 +12,19 @@
       <form class="user-form" action="/users" method="post">
         <fieldset disabled>
           <div class="form-group row">
-            <label for="name" class="col-sm-3 col-form-label">Name</label>
+            <label for="name" class="col-sm-3 col-form-label">닉네임</label>
             <div class="col-sm-9">
               <input class="form-control" type="text" id="name" name="name" value="<%= user.name %>">
             </div>
           </div>
           <div class="form-group row">
-            <label for="email" class="col-sm-3 col-form-label">Email</label>
+            <label for="email" class="col-sm-3 col-form-label">이메일</label>
             <div class="col-sm-9">
               <input class="form-control" type="text" id="email" name="email" value="<%= user.email %>">
             </div>
           </div>
           <div class="form-group row">
-            <label for="addr" class="col-sm-3 col-form-label">Detailed address</label>
+            <label for="addr" class="col-sm-3 col-form-label">주소(몇호)</label>
             <div class="col-sm-9">
               <input class="form-control" type="text" id="addr" name="addr" value="<%= user.addr %>">
             </div>
@@ -33,10 +33,10 @@
       </form>
 
       <div>
-        <a class="btn btn-primary" href="/users">Back</a>
-        <a class="btn btn-primary" href="/users/<%= user.username %>/edit">Edit</a>
+        <a class="btn btn-primary" href="/users">뒤로가기</a>
+        <a class="btn btn-primary" href="/users/<%= user.username %>/edit">수정</a>
         <form action="/users/<%= user.username %>?_method=delete" method="post" class="d-inline">
-          <a class="btn btn-primary" href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+          <a class="btn btn-primary" href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">지우기</a>
         </form>
       </div>
 
