--- a/views/partials/boards/show/buttons.ejs
+++ b/views/partials/boards/show/buttons.ejs
@@ -3,13 +3,6 @@
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <div class="mt-3">
   <a class="btn btn-primary" href="/boards/<%= boardName %>">뒤로가기</a>
-  <% console.log('=====================================================') %>
-  <% console.log(isAuthenticated) %>
-  <% console.log(post.author) %>
-  <% console.log(currentUser.id) %>
-  <% console.log(post.author.id) %>
-  <% console.log('??????? ' + (isAuthenticated && post.author && currentUser.id == post.author.id)) %>
-  <% console.log('=====================================================') %>
   <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %>
   <a class="btn btn-primary" href="/boards/<%= boardName + '/' + post._id %>/edit">글 수정</a>
 
@@ -19,15 +12,16 @@
   <% } %>
 
   <form action="/boards/<%= boardName + '/' + post._id+'/likes'%>?_method=post" method="post" class="d-inline">
-    <a class="btn btn-primary" <%= liked?'disabled':'' %> href="#" onclick="confirm('Do you want to Like this?')?this.parentElement.submit():null;">
+    <% var like_disabled = liked?'disabled':'' %>
+    <a class="btn btn-primary <%= like_disabled %>" href="#" onclick="confirm('Do you want to Like this?')?this.parentElement.submit():null;">
       <i class='far fa-thumbs-up' style='font-size:24px'></i>
     </a>
-    <% if(boardName === 'trades' && isAuthenticated){ %>
-     <a class="btn btn-primary <% currentUser.id == post.author.id?'disabled':'' %>" href="/dm/<%= post.author.username %>/show">
+    <% if(isAuthenticated && boardName === 'trades'){ %>
+      <% var chat_disabled = currentUser.id == post.author.id?'disabled':'' %>
+      <a class="btn btn-primary <%= chat_disabled %>" href="/dm/<%= post.author.username %>/show">
         <i class='far fa-comment-dots' style='font-size:24px'></i>
-     </a>
-   <% } %>
-   <% console.log('    post.author.uesrname??? ' + post.author.username) %>
+      </a>
+    <% } %>
   </form>
 
 
