--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -8,12 +8,37 @@
 
     <div class="container mb-3">
 
-      <h2 class="mb-3">About</h2>
+    <!--  <h2 class="mb-3">About </h2>-->
+      <P style= "font-size: 20px;">거주지를 더 편안하게,
+        <span style="color:darkblue; font-weight:bold; font-size: 30px">&nbsp;&nbsp;&nbsp;&nbsp;우동이</span></p>
 
-      <P>거주지를 더 편안하게 "__가제__"</p>
-      <i class="far fa-comment-dots"></i>
-      <i class="fas fa-comment-dots"></i>
-      <i class="far fa-comment"></i>
+
+    <div class= "about">
+  <i class="fas fa-building" style="font-size:100px"></i>
+  <p>사람들과 편하게 소통하세요.<br>
+    <span style="color:blue; font-weight:bold">우동이</span>는 익명을 기반으로 한 게시판 입니다.</p>
+    </div>
+
+    <div class= "about" style = "margin-left: 200px; margin-top:30;" >
+      <i class="fas fa-bell"  style="font-size:100px; margin-left:170px;"></i>
+
+         <p>공지사항을 <span style="color:blue; font-weight:bold">우동이</span>를 통해서 받아보세요! <br>엘리베이터 점검시간을 정확히 알 수 있어요!</p>
+    </div>
+    <div class= "about" style = "margin-top:30px">
+      <i class="fas fa-won-sign" style="font-size:100px"></i>
+
+
+         <p>
+           같은 건물에 사는 사람들끼리 직거래를 해보세요!
+           <br>
+            나에겐 골치덩이가 다른사람에겐 소중한 귀중품이 될 수 도 있습니다!
+            <br>
+            <Strong>용돈</Strong>생기는건 덤!
+          </p>
+
+    </div>
+
+
 
 
     </div>
