--- a/views/boards/frees/index.ejs
+++ b/views/boards/frees/index.ejs
@@ -10,7 +10,7 @@
 
   <div class="container mb-3">
 
-    <h2 class="mb-3">Free Board</h2>
+    <h2 class="mb-3">자유 게시판</h2>
 
       <%- include('../../partials/boards/index/board-table') %>
 
