--- a/views/boards/frees/new.ejs
+++ b/views/boards/frees/new.ejs
@@ -12,9 +12,9 @@
 
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb p-1 pl-2 pr-2">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/boards/frees">Board</a></li>
-        <li class="breadcrumb-item active" aria-current="page">New Post</li>
+        <li class="breadcrumb-item"><a href="/">홈</a></li>
+        <li class="breadcrumb-item"><a href="/boards/frees">자유 게시판</a></li>
+        <li class="breadcrumb-item active" aria-current="page">새로운 포스트</li>
       </ol>
     </nav>
 
