--- a/views/boards/notices/index.ejs
+++ b/views/boards/notices/index.ejs
@@ -10,7 +10,7 @@
 
   <div class="container mb-3">
 
-    <h2 class="mb-3">Announcements</h2>
+    <h2 class="mb-3">공지사항</h2>
 
     <%- include('../../partials/boards/index/board-table') %>
 
