--- a/views/boards/notices/new.ejs
+++ b/views/boards/notices/new.ejs
@@ -10,9 +10,9 @@
 
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/boards/notices">Notice</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Notice Annoucement</li>
+          <li class="breadcrumb-item"><a href="/">홈</a></li>
+          <li class="breadcrumb-item"><a href="/boards/notices">공지사항</a></li>
+          <li class="breadcrumb-item active" aria-current="page">공지사항 게시판</li>
         </ol>
       </nav>
 
