--- a/views/boards/trades/new.ejs
+++ b/views/boards/trades/new.ejs
@@ -10,9 +10,9 @@
 
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item"><a href="/boards/trades">Trades</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Make Trades</li>
+          <li class="breadcrumb-item"><a href="/">홈</a></li>
+          <li class="breadcrumb-item"><a href="/boards/trades">직거래</a></li>
+          <li class="breadcrumb-item active" aria-current="page">직거래 게시판</li>
         </ol>
       </nav>
 
