--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -9,8 +9,10 @@
     <div class="container mb-3">
 
       <div class="jumbotron">
-        <h1>가제: 우리동네 게시판</h1>
+        <h1>우리 동네 이야기</h1>
+
         <P>우리동네 소통의 장 </p>
+          
       </div>
 
     </div>
