--- a/views/partials/boards/index/post-count.ejs
+++ b/views/partials/boards/index/post-count.ejs
@@ -3,11 +3,11 @@
   <div class="form-row">
 
     <div class="form-group col-3">
-      <label>Show</label>
+      <label>보기</label>
       <select name="limit" class="custom-select" onchange="this.parentElement.parentElement.parentElement.submit()">
-        <option value="5" <%= limit==5?'selected':'' %>>5 posts</option>
-        <option value="10" <%= limit==10?'selected':'' %>>10 posts</option>
-        <option value="20" <%= limit==20?'selected':'' %>>20 posts</option>
+        <option value="5" <%= limit==5?'selected':'' %>>5 게시글</option>
+        <option value="10" <%= limit==10?'selected':'' %>>10 게시글</option>
+        <option value="20" <%= limit==20?'selected':'' %>>20 게시글</option>
       </select>
     </div>
 
