--- a/views/partials/boards/show/comment-form.ejs
+++ b/views/partials/boards/show/comment-form.ejs
@@ -8,14 +8,15 @@
 */%>
 
 <form action="<%= actionUrl %><%= getPostQueryString(true) %>" method="post">
-  <fieldset <%= !isAuthenticated?'disabled':'' %>>
+  <fieldset  <%= !isAuthenticated?'disabled':'' %> >
+
     <div class="row">
       <div class="col-8"> <!-- 2 -->
         <textarea name="text" rows="2" class="form-control <%= (commentError._id == comment._id && commentError.errors.text)?'is-invalid':'' %>"><%= (commentForm._id == comment._id)?commentForm.form.text:comment.text %></textarea>
       </div>
       <div class="col-4">
         <% if(comment._id){ %>
-          <button type="submit" class="btn btn-primary h-100 mr-2 pl-4 pr-4">Edit</button>
+          <button type="submit" class="btn btn-primary h-100 mr-2 pl-4 pr-4">수정</button>
 <!-- 3 --><a href="javascript:void(0)" onclick="$('.comment-<%= comment._id %>').removeClass('comment-edit-enabled')">취소</a>
         <% } else { %>
           <button type="submit" class="btn btn-primary h-100 mr-2">댓글 달기</button>
