--- a/views/partials/boards/show/comments.ejs
+++ b/views/partials/boards/show/comments.ejs
@@ -27,7 +27,7 @@
               onclick="$('.comment-reply-enabled').removeClass('comment-reply-enabled'); $('.comment-edit-enabled').removeClass('comment-edit-enabled'); $('#comment-<%= comment._id %>').addClass('comment-edit-enabled')">수정</a>
             |
             <form action="/comments/<%= comment._id %>?postId=<%= post._id %>&_method=delete<%= getPostQueryString(true) %>" method="post" class="d-inline">
-              <a href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">뒤로가기</a>
+              <a href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">지우기</a>
             </form>
           </small>
           <% } %>
