--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,11 +4,13 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
   <div class="container">
 
-    <div class="navbar-brand">가제:우리동네 게시판 </div>
+    <div class="navbar-brand"> <i class="fa fa-group" style="font-size:30px"></i>
+      우리 동네 이야기 </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
       <ul class="navbar-nav">
         <li class="nav-item"><a href="/" class="nav-link">홈</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
