--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,88 +1,124 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+<head>
+  <%- include('../partials/head') %>
+</head>
 
-      <h3 class="contentBoxTop mb-3">New User</h3>
+<body>
+  <%- include('../partials/nav') %>
 
-      <form action="/users" method="post">
+  <div class="container mb-3">
+
+    <h3 class="contentBoxTop mb-3">회원가입</h3>
+
+    <form action="/users" method="post">
 
 
-        <div class="form-group row">
-          <label for="username" class="col-sm-3 col-form-label">아이디*</label>
-          <div class="col-sm-9">
-            <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>"> <!-- 1, 2 -->
-            <% if(errors.username){ %> <!-- 3 -->
-              <span class="invalid-feedback"><%= errors.username.message %></span>
-            <% } %>
-          </div>
+      <div class="form-group row">
+        <label for="username" class="col-sm-3 col-form-label">아이디
+            <small style="color:red">*</small>
+        </label>
+        <div class="col-sm-9">
+          <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.username){ %>
+          <!-- 3 -->
+          <span class="invalid-feedback"><%= errors.username.message %></span>
+          <% } %>
         </div>
-        <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">닉네임*</label>
-          <div class="col-sm-9">
-            <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 1, 2 -->
-            <% if(errors.name){ %> <!-- 3 -->
-              <span class="invalid-feedback"><%= errors.name.message %></span>
-            <% } %>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="email" class="col-sm-3 col-form-label">이메일</label>
-          <div class="col-sm-9">
-            <input type="text" id="email" name="email" value="<%= user.email %>" class="form-control <%= (errors.email)?'is-invalid':'' %>"> <!-- 1, 2 -->
-            <% if(errors.email){ %>
-              <span class="invalid-feedback"><%= errors.email.message %></span>
-            <% } %>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="addr" class="col-sm-3 col-form-label">주소</label>
-          <div class="col-sm-9">
-            <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 1, 2 -->
-            <% if(errors.addr){ %>
-              <span class="invalid-feedback"><%= errors.addr.message %></span>
-            <% } %>
-          </div>
-        </div>
+      </div>
+      <div class="form-group row">
+        <label for="name" class="col-sm-3 col-form-label">닉네임
 
-        <div class="form-group row">
-          <label for="password" class="col-sm-3 col-form-label">비밀번호*</label>
-          <div class="col-sm-9">
-            <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>"> <!-- 1, 2 -->
-            <% if(errors.password){ %> <!-- 3 -->
-              <span class="invalid-feedback"><%= errors.password.message %></span>
-            <% } %>
-          </div>
+          <small style="color:red">*</small>
+        </label>
+        <div class="col-sm-9">
+          <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.name){ %>
+          <!-- 3 -->
+          <span class="invalid-feedback"><%= errors.name.message %></span>
+          <% } %>
         </div>
-        <div class="form-group row">
-          <label for="passwordConfirmation" class="col-sm-3 col-form-label">비밀번호 확인*</label>
-          <div class="col-sm-9 col-sm-offset-3">
-            <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>"> <!-- 1, 2 -->
-            <% if(errors.passwordConfirmation){ %> <!-- 3 -->
-              <span class="invalid-feedback"><%= errors.passwordConfirmation.message %></span>
-            <% } %>
-          </div>
+      </div>
+      <div class="form-group row">
+        <label for="email" class="col-sm-3 col-form-label">이메일
+          <small style="color:red">*</small>
+
+        </label>
+        <div class="col-sm-9">
+          <input type="text" id="email" name="email" value="<%= user.email %>" class="form-control <%= (errors.email)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.email){ %>
+          <span class="invalid-feedback"><%= errors.email.message %></span>
+          <% } %>
         </div>
-        <p>
-          <small>*꼭 필요한 항목</small>
-        </p>
-
-        <% if(errors.unhandled){ %> <!-- 4 -->
-          <div class="alert alert-danger">
-            <%= errors.unhandled %>
-          </div>
-        <% } %>
-
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+      <div class="form-group row">
+        <label for="addr" class="col-sm-3 col-form-label">주소</label>
+        <div class="col-sm-9">
+          <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.addr){ %>
+          <span class="invalid-feedback"><%= errors.addr.message %></span>
+          <% } %>
         </div>
-      </form>
+      </div>
 
-    </div>
-  </body>
+      <div class="form-group row">
+        <label for="password" class="col-sm-3 col-form-label">비밀번호
+
+          <small style="color:red">*</small>
+        </label>
+        <div class="col-sm-9">
+          <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.password){ %>
+          <!-- 3 -->
+          <span class="invalid-feedback"><%= errors.password.message %></span>
+          <% } %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="passwordConfirmation" class="col-sm-3 col-form-label">비밀번호 확인
+          <small style="color:red">*</small>
+        </label>
+        <div class="col-sm-9 col-sm-offset-3">
+          <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.passwordConfirmation){ %>
+          <!-- 3 -->
+          <span class="invalid-feedback"><%= errors.passwordConfirmation.message %></span>
+          <% } %>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="isAdmin" class="col-sm-3 col-form-label">관리자입니까?
+          <small style="color:red">*</small>
+        </label>
+        <div class="col-sm-9 col-sm-offset-3">
+          <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>"> <!-- 1, 2 -->
+          <% if(errors.passwordConfirmation){ %>
+          <!-- 3 -->
+          <span class="invalid-feedback"><%= errors.passwordConfirmation.message %></span>
+          <% } %>
+        </div>
+      </div>
+
+      <p>
+
+        <small style="color:red">*꼭 필요한 항목</small>
+      </p>
+
+      <% if(errors.unhandled){ %>
+      <!-- 4 -->
+      <div class="alert alert-danger">
+        <%= errors.unhandled %>
+      </div>
+      <% } %>
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </form>
+
+  </div>
+</body>
+
 </html>
