--- a/views/partials/boards/show/buttons.ejs
+++ b/views/partials/boards/show/buttons.ejs
@@ -18,7 +18,7 @@
     </a>
     <% if(isAuthenticated && boardName === 'trades'){ %>
       <% var chat_disabled = currentUser.id == post.author.id?'disabled':'' %>
-      <a class="btn btn-primary <%= chat_disabled %>" href="/dm/<%= post.author.username %>/show">
+      <a class="btn btn-primary <%= chat_disabled %>" href="/dm/<%= post.author.username %>/ask">
         <i class='far fa-comment-dots' style='font-size:24px'></i>
       </a>
     <% } %>
