--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -27,46 +27,28 @@
             </div>
           </div>
           <div class="inbox_chat">
-            <div class="chat_list active_chat">
-              <div class="chat_people">
-                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-                <div class="chat_ib">
-                  <h5>Sunil Rajput adsiufhaihfihaeihfaihiewufhiㄴㄴㄴㄴㄴㄴㄴㄴㄴㄴㄴㄴ <span class="chat_date">Dec 25</span></h5>
-                  <p>Test, which is a new approach to have all solutions
-                    astrology under one roof.</p>
-                </div>
-              </div>
-            </div>
-            <div class="chat_list" style="cursor: pointer;" onclick="#">
-              <div class="chat_people">
-                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-                <div class="chat_ib">
-                  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-                  <p>Test, which is a new approach to have all solutions
-                    astrology under one roof.</p>
-                </div>
-              </div>
-            </div>
-
+            <!-- chat list will be loaded here -->
           </div>
 
         </div>
         <div class="mesgs">
           <div class="msg_history">
-            
+            <!-- messages will be appended here -->
           </div>
           <div class="type_msg">
             <div class="input_msg_write">
               <input type="text" class="write_msg" placeholder="Type a message" />
-              <button class="msg_send_btn" type="button" onclick="sendMsg()"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+              <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
             </div>
           </div>
+          <p id="temp"> 채팅 목록에서 대화 상대를 선택해주세요. </p>
+
         </div>
       </div>
 
     </div>
   </div>
-  <%- include('./partials/chat-scripts') %>
+  <%- include('./partials/chat-socket') %>
 </body>
 
 </html>
