--- a/views/dm/partials/chat-style.ejs
+++ b/views/dm/partials/chat-style.ejs
@@ -78,6 +78,13 @@
     margin: 0;
     padding: 5px 10px 5px 12px;
     width: 100%;
+    word-wrap: break-word;
+  }
+  .lame_date {
+    color: #FF5454;
+    display: block;
+    font-size: 12px;
+    margin: 12px 0 0;
   }
   .time_date {
     color: #747474;
@@ -99,6 +106,7 @@
     margin: 0; color:#fff;
     padding: 5px 10px 5px 12px;
     width:100%;
+    word-wrap: break-word;
   }
   .outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
   .sent_msg {
