--- a/views/partials/chat-icon.ejs
+++ b/views/partials/chat-icon.ejs
@@ -1,6 +1,10 @@
 <!--message-->
 <a href="/dm/" class="nav-link">
-  <i class='far fa-comment-dots' style='font-size:24px'></i>
-  <span class="button__badge"><%//=notifications %></span>
+  <i class='far fa-comment-dots' style='font-size:24px'>
+    <% // if (notifications) { %>
+    <span class="button__badge"></span>
+    <% // } %>
+  </i>
+
 </a>
 <!--add socket script down here?-->
