--- a/views/dm/chat.ejs
+++ b/views/dm/chat.ejs
@@ -26,7 +26,7 @@
         <input type="submit" class="chat" value="chat" />
       </form>
       <div id="box" class="box">
-        <%- include('./partials/socket-script') %>
+        <%- include('./partials/socket-script-old') %>
 
       </div>
 
