improved gui / fixed missing link

--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -41,7 +41,7 @@
               <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
             </div>
           </div>
-          <p id="temp"> 채팅 목록에서 대화 상대를 선택해주세요. </p>
+          <p id="temp"><br>채팅 목록에서 대화 상대를 선택해주세요. </p>
 
         </div>
       </div>
