fileupload and download done

--- a/views/partials/boards/index/board-table.ejs
+++ b/views/partials/boards/index/board-table.ejs
@@ -2,7 +2,7 @@
 
   <thead class="thead-light">
     <tr>
-      <th scope="col" width = 500> 제목 </th>
+      <th scope="col" class="title"> 제목 </th>
       <th scope="col" > 조회수 </th>
       <th scope="col" class="author"> 작성자 </th>
       <th scope="col" class="date"> 작성일 </th>
