--- a/views/partials/boards/new/form.ejs
+++ b/views/partials/boards/new/form.ejs
@@ -1,4 +1,5 @@
-<form action="/boards/<%= boardName %>" method="post">
+<form action="/boards/<%= boardName%>" enctype="multipart/form-data" method="post"><!-- 1 -->
+
 
   <div class="form-group">
     <label for="title">제목</label>
@@ -7,6 +8,13 @@
       <span class="invalid-feedback"><%= errors.title.message %></span>
     <% } %>
   </div>
+
+
+      <div class="form-group">                                                          <!-- 2 -->
+  <label for="attachment">Attachment</label>                                      <!-- 2 -->
+            <input type="file" name="attachment" class="form-control-file" id="attachment"> <!-- 2 -->
+     </div>
+
 
   <div class="form-group">
     <label for="body">내용</label>
