--- a/views/partials/boards/show/card.ejs
+++ b/views/partials/boards/show/card.ejs
@@ -1,10 +1,26 @@
+<html>
+<meta charset="utf-8">
+
 <div class="card">
   <h5 class="card-header p-2"><%= post.title %></h5>
   <div class="row">
 
     <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
+      <% if(post.attachment) { %>
+              <div class="ml-2">
+     <!-- 1 --> <small>📁 Attachment: <a href="/files/<%= post.attachment.serverFileName %>/<%= post.attachment.originalFileName %>"><%= post.attachment.originalFileName %></a> (<%= util.bytesToSize(post.attachment.size) %>)</small>
+              </div>
+            <% } %>
+             </div>
+
+
+    <div class="col-md-7 col-lg-8 col-xl-9 order-sm-2 order-md-1">
       <div class="post-body p-2"><%= post.body %></div>
     </div>
+
+
+
+
 
     <div class="col-md-5 col-lg-4 col-xl-3 order-sm-1 order-md-2">
       <div class="post-info card m-2 p-2">
@@ -35,3 +51,4 @@
 
   </div>
 </div>
+</html>
