--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,9 +1,21 @@
-<h3 class="mb-3">Edit User</h3>
+<!DOCTYPE html>
+<html>
+  <head>
+    <%- include('../partials/head') %>
+  </head>
+  <body>
+    <%- include('../partials/nav') %>
+
+  <div class="container mb-3">
+
+
+    <h3 class="mb-3">회원정보 수정</h3>
 
       <form action="/users/<%= username %>?_method=put" method="post"> <!-- 1 -->
 
         <div class="form-group row">
-          <label for="currentPassword" class="col-sm-3 col-form-label">Current Password*</label>
+          <label for="currentPassword" class="col-sm-3 col-form-label">현재 비밀번호
+          <small style="color:red">*</small></label>
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="currentPassword" name="currentPassword" value="" class="form-control <%= (errors.currentPassword)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.currentPassword){ %> <!-- 3 -->
@@ -15,7 +27,8 @@
         <hr></hr>
 
         <div class="form-group row">
-          <label for="username" class="col-sm-3 col-form-label">Username*</label>
+          <label for="username" class="col-sm-3 col-form-label">아이디
+          <small style="color:red">*</small></label>
           <div class="col-sm-9">
             <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.username){ %> <!-- 3 -->
@@ -25,7 +38,8 @@
         </div>
 
         <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Name*</label>
+          <label for="name" class="col-sm-3 col-form-label">닉네임
+            <small style="color:red">*</small></label>
           <div class="col-sm-9">
             <input type="text" id="name" name="name" value="<%= user.name %>" class="form-control <%= (errors.name)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.name){ %> <!-- 3 -->
@@ -34,7 +48,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="addr" class="col-sm-3 col-form-label">Address</label>
+          <label for="addr" class="col-sm-3 col-form-label">주소</label>
           <div class="col-sm-9">
             <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.addr){ %> <!-- 3 -->
@@ -44,7 +58,8 @@
         </div>
 
         <div class="form-group row">
-          <label for="email" class="col-sm-3 col-form-label">Email</label>
+          <label for="email" class="col-sm-3 col-form-label">이메일
+          <small style="color:red">*</small></label>
           <div class="col-sm-9">
             <input type="text" id="email" name="email" value="<%= user.email %>" class="form-control <%= (errors.email)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.email){ %> <!-- 3 -->
@@ -54,7 +69,8 @@
         </div>
 
         <div class="form-group row">
-          <label for="newPassword" class="col-sm-3 col-form-label">New Password</label>
+          <label for="newPassword" class="col-sm-3 col-form-label">새로운 비밀번호
+          <small style="color:red">*</small></label>
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="newPassword" name="newPassword" value="" class="form-control <%= (errors.newPassword)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.newPassword){ %> <!-- 3 -->
@@ -64,7 +80,8 @@
         </div>
 
         <div class="form-group row">
-          <label for="passwordConfirmation" class="col-sm-3 col-form-label">Password Confirmation</label>
+          <label for="passwordConfirmation" class="col-sm-3 col-form-label">비밀번호 확인
+          <small style="color:red">*</small> </label>
           <div class="col-sm-9 col-sm-offset-3">
             <input type="password" id="passwordConfirmation" name="passwordConfirmation" value="" class="form-control <%= (errors.passwordConfirmation)?'is-invalid':'' %>"> <!-- 2 -->
             <% if(errors.passwordConfirmation){ %> <!-- 3 -->
@@ -74,7 +91,7 @@
         </div>
 
         <p>
-          <small>*Required</small>
+          <small><small style="color:red">*</small>필요한 항목</small>
         </p>
 
         <% if(errors.unhandled){ %> <!-- 4 -->
@@ -82,3 +99,12 @@
             <%= errors.unhandled %>
           </div>
         <% } %>
+
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">제출</button>
+        </div>
+
+
+      </div>
+    </body>
+  </html>
