--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -10,7 +10,7 @@
 
     <div class="container">
 
-      <h3 class="mb-3">Login</h3>
+      <h3 class="mb-3">로그인</h3>
 
       <form class="user-form" action="/login" method="post">
 
